# sf-data-training

./: clean_with_pandas.ipynb  intro_to_pandas.ipynb  pyproject.toml
app/: app.py
data/pandas_inputs/: 2017-episodes.csv  2018-episodes.csv
data/pandas_outputs/: 2017-episodes.csv  2017-header.csv  cleanup_with_pandas.ipynb
simple_app/: app.py
