[tool.poetry]
name = "sf-data-training"
version = "0.1.0"
description = "internal training resources"
authors = ["Kaj, Tambe, Michael, Francisco"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
